--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,16 @@
 {
     "compilerOptions": {
         "baseUrl": "src",
-    },
-    "include": [
-        "src"
-    ]
+        "paths": {
+            "components/*": [
+                "components/*"
+            ],
+            "assets/*": [
+                "assets/*"
+            ],
+            "pages/*": [
+                "pages/*"
+            ]
+        }
+    }
 }
